EMBCDFA-478 Portal SSO - Integrate with BC Service Card - Partial commit

--- a/dfa/src/UI/embc-dfa/src/app/core/layout/footer/footer.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/layout/footer/footer.component.html
@@ -3,7 +3,7 @@
     <mat-toolbar-row>
       <div class="row row-align">
         <div class="col-md-4 contact-info">
-          <span>Contact ERA Support toll free at 1-844-537-7377</span>
+          <span>Contact DFA Support toll free at 1-123-456-7890</span>
         </div>
 
         <div class="col-md-6">
