--- a/dfa/src/UI/embc-dfa/src/app/login-page/login-page.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/login-page/login-page.component.html
@@ -18,7 +18,8 @@
   <div class="grid">
     <div class="register-with-card">
       <div>
-        <div class="register-with-card-tab">Preferred Method</div>
+        <!--<div class="register-with-card-tab">Preferred Method</div>-->
+        <div style="background-color:red;text-align:center">Under construction</div>
         <div class="register-with-card-inner">
           <img
             src="/assets/images/services-card-icon.png"
@@ -86,7 +87,7 @@
       </div>
     </div>
 
-    <div class="register-without-card">
+    <div class="register-without-card" style="display:none">
       <div>
         <img
           src="/assets/images/person-icon.svg"
