--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/components/conflict-management/conflict-management.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/components/conflict-management/conflict-management.component.html
@@ -29,13 +29,13 @@
               <table class="conflicts-table">
                 <tr class="main-view">
                   <th class="highlight-conflicts">
-                    Evacuee Registration & Assistance (ERA)
+                    Disaster Financial Assistance (DFA)
                   </th>
                   <th class="highlight">BC Services Card</th>
                 </tr>
                 <tr>
                   <td class="mobile-label highlight-conflicts">
-                    Evacuee Registration & Assistance (ERA)
+                    Disaster Financial Assistance (DFA)
                   </td>
                   <td>
                     <p>
@@ -107,13 +107,13 @@
               <table class="conflicts-table">
                 <tr class="main-view">
                   <th class="highlight-conflicts">
-                    Evacuee Registration & Assistance (ERA)
+                    Disaster Financial Assistance (DFA)
                   </th>
                   <th class="highlight">BC Services Card</th>
                 </tr>
                 <tr>
                   <td class="mobile-label highlight-conflicts">
-                    Evacuee Registration & Assistance (ERA)
+                    Disaster Financial Assistance (DFA)
                   </td>
                   <td>
                     <p>
@@ -180,13 +180,13 @@
               <table class="conflicts-table">
                 <tr class="main-view">
                   <th class="highlight-conflicts">
-                    Evacuee Registration & Assistance (ERA)
+                    Disaster Financial Assistance (DFA)
                   </th>
                   <th class="highlight">BC Services Card</th>
                 </tr>
                 <tr>
                   <td class="mobile-label highlight-conflicts">
-                    Evacuee Registration & Assistance (ERA)
+                    Disaster Financial Assistance (DFA)
                   </td>
                   <td>
                     <p>{{ addressConflict?.originalValue?.addressLine1 }}</p>
