--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/components/dashboard/dashboard.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/components/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
         >
       </div>
     </div>
-    <div class="row align-banner">
+    <div class="row align-banner" style="display:none">
       <div class="col-md-12">
         <mat-card class="view-banner">
           <mat-card-content>
