DFA - Profile creation UI changes partial commit

--- a/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
@@ -30,7 +30,7 @@
     <div id="personalDetail">
       <p *ngIf="showHeading" class="review-heading">Review & Submit</p>
 
-      <mat-card-content>
+      <mat-card-content style="display:none">
         <div class="row justify-content-between">
           <div class="col-md-6 card-heading">Restriction</div>
           <div class="col-md-2">
@@ -558,7 +558,7 @@
         </div>
       </mat-card-content>
 
-      <mat-card-content>
+      <mat-card-content style="display:none">
         <div class="row justify-content-between">
           <div class="col-md-6 card-heading">Security Questions</div>
           <div class="col-md-2">
