--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
@@ -46,12 +46,10 @@
           formControlName="community"
           matInput
           placeholder="City"
-          [matAutocomplete]="auto"
           required
         />
-        <mat-autocomplete
+        <!--<mat-autocomplete
           #auto="matAutocomplete"
-          [displayWith]="cityDisplayFn"
           id="cityAutocomplete"
         >
           <mat-option
@@ -61,16 +59,15 @@
           >
             {{ option.name }}
           </mat-option>
-        </mat-autocomplete>
+        </mat-autocomplete>-->
         <mat-error
           *ngIf="
-            addressFormControl?.community.invalid &&
             addressFormControl?.community.hasError('required')
           "
         >
           City is required</mat-error
         >
-        <mat-error *ngIf="validateCity()"> City is invalid</mat-error>
+        <!--<mat-error *ngIf="validateCity()"> City is invalid</mat-error>-->
       </mat-form-field>
     </div>
   </div>
@@ -80,6 +77,7 @@
       <mat-form-field appearance="outline">
         <mat-label>Province</mat-label>
         <input
+          
           matInput
           placeholder="Province"
           readonly
@@ -114,12 +112,12 @@
     </div>
   </div>
 
-  <div class="row">
+  <!--<div class="row">
     <div class="col-md-3">
       <mat-form-field appearance="outline">
         <mat-label>Country</mat-label>
         <input matInput placeholder="Country" readonly value="Canada" />
       </mat-form-field>
     </div>
-  </div>
+  </div>-->
 </div>
