--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/personal-details/personal-details.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/personal-details/personal-details.component.html
@@ -47,23 +47,9 @@
       </div>
 
       <div class="row">
-        <div class="col-md-4">
-          <mat-form-field appearance="outline">
-            <mat-label>Preferred Name</mat-label>
-            <input
-              maxlength="100"
-              formControlName="preferredName"
-              matInput
-              placeholder="Preferred Name"
-            />
-          </mat-form-field>
-        </div>
-      </div>
-
-      <div class="row">
         <div class="col-md-3">
           <mat-form-field appearance="outline">
-            <mat-label>Initials</mat-label>
+            <mat-label>Initial</mat-label>
             <input
               maxlength="100"
               formControlName="initials"
@@ -75,74 +61,34 @@
       </div>
 
       <div class="row">
-        <div class="col-md-3">
-          <mat-form-field appearance="outline">
-            <mat-label>Gender</mat-label>
-            <mat-select formControlName="gender" required>
-              <mat-option>--Gender</mat-option>
-              <mat-option *ngFor="let gen of gender" [value]="gen.value">
-                {{ gen.name }}
-              </mat-option>
-            </mat-select>
-            <mat-error
+        <div class="col-md-6 bottomspace">
+          <mat-label class="card-heading">Are you an Indigenous person? <span style="color:red">*</span> (First Nation, Inuit, or Metis)</mat-label>
+          <br />
+          <mat-radio-group
+            formControlName="isIndigenous"
+            class="primary-radio-group"
+            required
+            aria-label="Select an option">
+             
+           
+              <mat-radio-button
+                class="primary-radio-button"
+                *ngFor="let option of radioOption"
+                [value]="option"
+              >
+                {{ option }}
+              </mat-radio-button>
+             <mat-error
+              class="custom-mat-error"
               *ngIf="
-                personalFormControl.gender.invalid &&
-                personalFormControl.gender.hasError('required')
+                personalFormControl?.isIndigenous?.touched &&
+                personalFormControl?.isIndigenous?.invalid &&
+                personalFormControl?.isIndigenous?.hasError('required')
               "
             >
-              Gender is required</mat-error
+              This is required</mat-error
             >
-          </mat-form-field>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-3">
-          <mat-form-field type="date" appearance="outline">
-            <!--maxlength="10"-->
-            <mat-label>Date of Birth</mat-label>
-            <input
-              formControlName="dateOfBirth"
-              matInput
-              placeholder="mm/dd/yyyy"
-              [textMask]="{ mask: dateMask, keepCharPositions: true }"
-              required
-              [readonly]="disableFields"
-            />
-            <mat-hint>Allowed Date format: mm/dd/yyyy</mat-hint>
-            <mat-error
-              *ngIf="
-                personalFormControl.dateOfBirth.invalid &&
-                personalFormControl.dateOfBirth.hasError('required')
-              "
-            >
-              Date of Birth is required</mat-error
-            >
-            <mat-error
-              *ngIf="
-                personalFormControl.dateOfBirth.invalid &&
-                personalFormControl.dateOfBirth.hasError('invalidDate')
-              "
-            >
-              Date of Birth is invalid</mat-error
-            >
-            <mat-error
-              *ngIf="
-                personalFormControl.dateOfBirth.invalid &&
-                personalFormControl.dateOfBirth.hasError('futureDate')
-              "
-            >
-              Date of Birth should be in the past</mat-error
-            >
-            <mat-error
-              *ngIf="
-                personalFormControl.dateOfBirth.invalid &&
-                personalFormControl.dateOfBirth.hasError('invalidYear')
-              "
-            >
-              Invalid year. The Year must be between 1800-2100</mat-error
-            >
-          </mat-form-field>
+          </mat-radio-group>
         </div>
       </div>
     </form>
