EMBCDFA-545 & EMBCDFA-546 partial commit changes

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
@@ -77,7 +77,7 @@
       <mat-form-field appearance="outline">
         <mat-label>Province</mat-label>
         <input
-          
+          formControlName="stateProvince"
           matInput
           placeholder="Province"
           readonly
