--- a/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
@@ -127,41 +127,6 @@
             }}
           </div>
         </div>
-        <div class="row info-detail">
-          <div class="col-md-3">Preferred Name:</div>
-          <div class="col-md-3">
-            {{
-              (formCreationService.personalDetailsForm$ | async)?.value
-                ?.preferredName
-            }}
-          </div>
-        </div>
-        <div class="row info-detail">
-          <div class="col-md-3">Initials:</div>
-          <div class="col-md-3">
-            {{
-              (formCreationService.personalDetailsForm$ | async)?.value
-                ?.initials
-            }}
-          </div>
-        </div>
-        <div class="row info-detail">
-          <div class="col-md-3">Date of Birth:</div>
-          <div class="col-md-3">
-            {{
-              (formCreationService.personalDetailsForm$ | async)?.value
-                ?.dateOfBirth | customDate
-            }}
-          </div>
-        </div>
-        <div class="row info-detail">
-          <div class="col-md-3">Gender:</div>
-          <div class="col-md-3">
-            {{
-              (formCreationService.personalDetailsForm$ | async)?.value?.gender
-            }}
-          </div>
-        </div>
       </mat-card-content>
 
       <mat-card-content>
@@ -205,81 +170,26 @@
         <div class="row info-detail">
           <div
             class="col-md-3"
-            *ngIf="
-              (formCreationService.addressForm$ | async)?.value?.address
-                ?.country?.code === 'CAN' ||
-              (formCreationService.addressForm$ | async)?.value?.address
-                ?.country?.code === 'USA'
-            "
+            
           >
             City:
           </div>
-          <div
-            class="col-md-3"
-            *ngIf="
-              (formCreationService.addressForm$ | async)?.value?.address
-                ?.country?.code !== 'CAN' &&
-              (formCreationService.addressForm$ | async)?.value?.address
-                ?.country?.code !== 'USA'
-            "
-          >
-            City/ Jurisdiction:
-          </div>
-          <div
-            class="col-md-3"
-            *ngIf="
-              (formCreationService.addressForm$ | async)?.value?.isBcAddress ===
-              'Yes'
-            "
-          >
-            {{
-              (formCreationService.addressForm$ | async)?.value?.address
-                ?.community?.name
-            }}
-          </div>
-          <div
-            class="col-md-3"
-            *ngIf="
-              (formCreationService.addressForm$ | async)?.value?.isBcAddress ===
-              'No'
-            "
-          >
+          
+          <div class="col-md-3">
             {{
               (formCreationService.addressForm$ | async)?.value?.address
                 ?.community
             }}
           </div>
+          
         </div>
         <div class="row info-detail">
           <div
-            class="col-md-3"
-            *ngIf="
-              (formCreationService.addressForm$ | async)?.value?.address
-                ?.country?.code === 'CAN'
-            "
-          >
+            class="col-md-3">
             Postal Code:
           </div>
-          <div
-            class="col-md-3"
-            *ngIf="
-              (formCreationService.addressForm$ | async)?.value?.address
-                ?.country?.code === 'USA'
-            "
-          >
-            Zip Code:
-          </div>
-          <div
-            class="col-md-3"
-            *ngIf="
-              (formCreationService.addressForm$ | async)?.value?.address
-                ?.country?.code !== 'CAN' &&
-              (formCreationService.addressForm$ | async)?.value?.address
-                ?.country?.code !== 'USA'
-            "
-          >
-            Postal/ Zip Code:
-          </div>
+          
+          
           <div class="col-md-3">
             {{
               (formCreationService.addressForm$ | async)?.value?.address
@@ -289,37 +199,13 @@
         </div>
         <div class="row info-detail">
           <div
-            class="col-md-3"
-            *ngIf="
-              (formCreationService.addressForm$ | async)?.value?.address
-                ?.country?.code === 'CAN'
-            "
-          >
+            class="col-md-3">
             Province:
           </div>
-          <div
-            class="col-md-3"
-            *ngIf="
-              (formCreationService.addressForm$ | async)?.value?.address
-                ?.country?.code === 'USA'
-            "
-          >
-            State:
-          </div>
-
           <div class="col-md-3">
             {{
               (formCreationService.addressForm$ | async)?.value?.address
-                ?.stateProvince?.name
-            }}
-          </div>
-        </div>
-        <div class="row info-detail">
-          <div class="col-md-3">Country:</div>
-          <div class="col-md-3">
-            {{
-              (formCreationService.addressForm$ | async)?.value?.address
-                ?.country?.name
+                ?.stateProvince
             }}
           </div>
         </div>
@@ -365,27 +251,10 @@
         </div>
         <div class="row info-detail">
           <div
-            class="col-md-3"
-            *ngIf="
-              (formCreationService.addressForm$ | async)?.value?.mailingAddress
-                ?.country?.code === 'CAN' ||
-              (formCreationService.addressForm$ | async)?.value?.mailingAddress
-                ?.country?.code === 'USA'
-            "
-          >
+            class="col-md-3">
             City:
           </div>
-          <div
-            class="col-md-3"
-            *ngIf="
-              (formCreationService.addressForm$ | async)?.value?.mailingAddress
-                ?.country?.code !== 'CAN' &&
-              (formCreationService.addressForm$ | async)?.value?.mailingAddress
-                ?.country?.code !== 'USA'
-            "
-          >
-            City/ Jurisdiction:
-          </div>
+          
           <div
             class="col-md-3"
             *ngIf="
@@ -413,34 +282,10 @@
         </div>
         <div class="row info-detail">
           <div
-            class="col-md-3"
-            *ngIf="
-              (formCreationService.addressForm$ | async)?.value?.mailingAddress
-                ?.country?.code === 'CAN'
-            "
-          >
+            class="col-md-3">
             Postal Code:
           </div>
-          <div
-            class="col-md-3"
-            *ngIf="
-              (formCreationService.addressForm$ | async)?.value?.mailingAddress
-                ?.country?.code === 'USA'
-            "
-          >
-            Zip Code:
-          </div>
-          <div
-            class="col-md-3"
-            *ngIf="
-              (formCreationService.addressForm$ | async)?.value?.mailingAddress
-                ?.country?.code !== 'CAN' &&
-              (formCreationService.addressForm$ | async)?.value?.mailingAddress
-                ?.country?.code !== 'USA'
-            "
-          >
-            Postal/ Zip Code:
-          </div>
+         
           <div class="col-md-3">
             {{
               (formCreationService.addressForm$ | async)?.value?.mailingAddress
@@ -450,31 +295,17 @@
         </div>
         <div class="row info-detail">
           <div
-            class="col-md-3"
-            *ngIf="
-              (formCreationService.addressForm$ | async)?.value?.mailingAddress
-                ?.country?.code === 'CAN'
-            "
-          >
+            class="col-md-3">
             Province:
-          </div>
-          <div
-            class="col-md-3"
-            *ngIf="
-              (formCreationService.addressForm$ | async)?.value?.mailingAddress
-                ?.country?.code === 'USA'
-            "
-          >
-            State:
           </div>
           <div class="col-md-3">
             {{
               (formCreationService.addressForm$ | async)?.value?.mailingAddress
-                ?.stateProvince?.name
+                ?.stateProvince
             }}
           </div>
         </div>
-        <div class="row info-detail">
+        <!--<div class="row info-detail">
           <div class="col-md-3">Country:</div>
           <div class="col-md-3">
             {{
@@ -482,12 +313,12 @@
                 ?.country?.name
             }}
           </div>
-        </div>
+        </div>-->
       </mat-card-content>
 
       <mat-card-content>
         <div class="row justify-content-between">
-          <div class="col-md-6 card-heading">Contact Details</div>
+          <div class="col-md-6 card-heading">Current Contact Address</div>
           <div class="col-md-2">
             <button
               class="edit-image"
@@ -506,45 +337,28 @@
         </div>
         <hr />
         <div class="row info-detail">
-          <div class="col-md-1">
-            <span
-              *ngIf="
-                (formCreationService.contactDetailsForm$ | async)?.value
-                  .showContacts
-              "
-            >
-              <img
-                src="/assets/images/restriction-on.svg"
-                height="20"
-                width="20"
-              />
-            </span>
-            <span
-              *ngIf="
-                !(formCreationService.contactDetailsForm$ | async)?.value
-                  .showContacts
-              "
-            >
-              <img
-                src="/assets/images/restriction-off.svg"
-                height="20"
-                width="20"
-              />
-            </span>
-          </div>
-          <div class="col-md-9">
+          
+          <!--<div class="col-md-9">
             <p>
               You have given your consent for Emergency Management British
               Columbia and your Local Emergency Program to communicate with you
               by email or phone regarding your emergency situation.
             </p>
-          </div>
+          </div>-->
         </div>
         <div class="row info-detail">
-          <div class="col-md-3">Telephone/Mobile:</div>
+          <div class="col-md-3">Cellular Telephone Number:</div>
           <div class="col-md-3">
             {{
               (formCreationService.contactDetailsForm$ | async)?.value?.phone
+            }}
+          </div>
+        </div>
+        <div class="row info-detail">
+          <div class="col-md-3">Residence Telephone Number:</div>
+          <div class="col-md-3">
+            {{
+              (formCreationService.contactDetailsForm$ | async)?.value?.residencePhone
             }}
           </div>
         </div>
