--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/homeowner-application-forms/damaged-property-address/damaged-property-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/homeowner-application-forms/damaged-property-address/damaged-property-address.component.html
@@ -1,7 +1,7 @@
 <mat-card class="card-align" style="border:none;" [class.mat-elevation-z0]="true">
   <mat-card-content>
 
-    <form [formGroup]="profileVerificationForm">
+    <form [formGroup]="damagedPropertyAddressForm">
 
       <ng-container>
         <div class="row">
