EMBCDFA-545 - design changes on the review screen

--- a/dfa/src/UI/embc-dfa/src/app/feature-components/nextstepsprofile/nextstepsprofile.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/nextstepsprofile/nextstepsprofile.component.html
@@ -31,6 +31,7 @@
           <button
             class="button-p notice-button"
             mat-button
+            (click)="navigateToDFAapplication()"
           >
             Yes, I want to apply now
           </button>
