--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/homeowner-application-forms/damaged-property-address/damaged-property-address.component.scss
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/homeowner-application-forms/damaged-property-address/damaged-property-address.component.scss
@@ -16,3 +16,16 @@ mat-form-field {
     font-weight: 700;
     color: #169bd5;
 }
+
+
+.radio-extra-label {
+  font-weight: normal;
+  margin-left: 30px;
+}
+
+.horizontal-radio-group {
+  display: flex; flex-direction: row;
+  /* display: inline-grid; */
+  /* display: grid; */
+  margin: 15px 0;
+}
